# Auth_sprint_1

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
auth-flask-solution/: Dockerfile  requirements.txt
auth-flask-solution/src/: decorators.py  main.py  main_sync.py  pywsgi.py
auth-flask-solution/src/api/v1/: auth.py  roles.py  routes.py  schemas.py
auth-flask-solution/src/core/: app_factory.py  settings.py
auth-flask-solution/src/db/: cache.py  db_factory.py  redis.py
auth-flask-solution/src/models/: db_models.py  general.py
auth-flask-solution/src/services/: auth.py  cache.py  json.py  roles.py  utils.py
fastapi-solution/src/services/: films.py  genres.py  persons.py  search_engine.py
nginx/: default.conf
tests/functional/: conftest.py  docker-compose.yaml  requirements.txt  settings.py
tests/functional/indices/: genre.json  movies.json  persons.json
tests/functional/src/: test_account_history.py  test_auth.py  test_change_password.py  test_login.py  test_logout.py  test_protected.py  test_refresh.py  test_registration.py  test_roles.py  test_update_user_data.py
tests/functional/testdata/: generate_tokens.py  login.py  logout.py  postgresdata.py  protected.py  refresh.py  users.py  users_change_data.py  users_change_password.py  users_registration.py
tests/functional/utils/: connection.py  helpers.py  wait_for_es.py  wait_for_redis.py
