[tool.poetry]
name = "auth-flask-solution"
version = "0.1.0"
description = ""
authors = ["Elizaveta Tishkovets <etishkovec@ubic.tech>"]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^5.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
