[tool.poetry]
name = "auth-flask-solution"
version = "0.1.0"
description = ""
authors = ["Elizaveta Tishkovets <etishkovec@ubic.tech>"]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^5.0.4"
Flask = "^2.2.2"
Flask-JWT-Extended = "^4.4.4"
Flask-Security = "^3.0.0"
flasgger = "^0.9.5"
flask-marshmallow = "^0.14.0"
gevent = "^22.10.1"
Flask-Pydantic = "^0.11.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
